undrr/web-backlog#895: RTL fixes; undrr/web-backlog#893: Card spacing.

--- a/stories/Components/Cards/Card/card.scss
+++ b/stories/Components/Cards/Card/card.scss
@@ -22,6 +22,7 @@
 .mg-card {
   display: inline-block;
   position: relative;
+  margin-bottom: $mg-spacing-100;
 
   // Vertical CARD
   &__vc {
