--- a/stories/Utilities/FullWidth/FullWidth.scss
+++ b/stories/Utilities/FullWidth/FullWidth.scss
@@ -17,3 +17,7 @@
   width: 100vw;
   z-index: -1;
 }
+
+[dir="rtl"] .mg-container-full-width::before {
+  margin-right: calc(50% - 50vw);
+}
